# fps-game

./: .gitignore  CMakeLists.txt  leaks.txt  run.sh
Core/: CMakeLists.txt
Core/include/: logger.h  path_helper.h
Core/src/: logger.cpp  path_helper.cpp
GameEngine/: CMakeLists.txt
RenderLib/: CMakeLists.txt
RenderLib/include/camera/: camera.h
RenderLib/include/mesh/: ebo.h  vao.h  vbo.h
RenderLib/include/shaders/: loader.h
RenderLib/include/textures/: texture.h
RenderLib/src/camera/: camera.cpp
RenderLib/src/mesh/: ebo.cpp  vao.cpp  vbo.cpp
RenderLib/src/shaders/: fragment_shader.glsl  loader.cpp  vertex_shader.glsl
RenderLib/src/textures/: texture.cpp
WindowLib/: CMakeLists.txt
WindowLib/include/: window.h
WindowLib/include/glad/: gl.h
WindowLib/src/: gl.c  window.cpp
src/: main.cpp
